fix header styles (v-align)

--- a/src/app/store/header/store-header.component.css
+++ b/src/app/store/header/store-header.component.css
@@ -20,6 +20,7 @@
   flex: 0 0 auto;
   padding: 0 0.5rem;
   align-items: center;
+  justify-content: center;
   cursor: pointer;
 }
 .logo:hover {
@@ -27,28 +28,20 @@
 }
 
 .logo .mobile {
-  display: block;
+  display: inline;
 }
 
 .logo .desktop {
   display: none;
 }
 
-.logo>* {
-  display: block;
-  height: 5rem;
-  padding-bottom: 0.5rem;
-  margin: 0;
-}
-
 @media(min-width: 800px) {
   .logo {
     padding: 0 1.5rem 0 1rem;
-    justify-content: space-between;
   }
 
   .logo .desktop {
-    display: block;
+    display: inline;
   }
   .logo .mobile {
     display: none;
